[package]
name = "wasm-playground"
version = "0.1.0"
authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.55"

[dependencies.web-sys]
version = "0.3.32"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlElement',
  'EventTarget',
  'Node',
  'Window',
  'console'
]

[dependencies.js-sys]
version = "0.3.32"

[[bin]]
name = "greet"
path = "src/bin/main.rs"

[lib]
crate-type = ["cdylib", "lib"]
